<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="user_turn_first">You go first.</string>
    <string name="computer_turn_first">Android goes first.</string>
    <string name="user_turn">It\'s your turn (X).</string>
    <string name="computer_turn">It\'s Android\'s turn</string>
    <string name="tie_rst">It\'s a tie!</string>
    <string name="user_rst">You won!</string>
    <string name="computer_rst">Android won!</string>
    <string name="start_a_new_game">Start a New Game</string>
    <string name="you_wins">YOU WINS</string>
    <string name="android_wins">ANDROID WINS</string>
    <string name="tie">TIE</string>
    <string name="menu_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="select_playing_mode">Select playing mode</string>
    <string name="one_player">One player</string>
    <string name="two_players">Two players</string>
    <string name="audio">Audio</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="o_wins">O wins</string>
    <string name="x_wins">X wins</string>
    <string name="o_turns_first">O goes first</string>
    <string name="x_turns_first">X goes first</string>
    <string name="o_turn">It\'s O\'s turn</string>
    <string name="x_turn">It\'s X\'s turn</string>
    <string name="o_rst">O won!</string>
    <string name="x_rst">X won!</string>
    <string name="wiki">Wiki</string>
    <string name="wiki_uri">https://en.wikipedia.org/wiki/Tic-tac-toe</string>
</resources>