<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="22sp"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:text="@string/menu_settings"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/play_mode_group"
        android:checkedButton="@id/one_player"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/select_playing_mode"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/one_player"
            android:text="@string/one_player"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/two_players"
            android:text="@string/two_players"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            />

    </RadioGroup>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/audio_group"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/audio"
            />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/turn_on_audio"
            android:text="@string/turn_on"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/turn_off_audio"
            android:text="@string/turn_off"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="#0094DE"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            />

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textSize="16sp"
            android:textColor="#0094DE"
            />

    </LinearLayout>



</LinearLayout>